# src/app/services/api.service.ts
@@ -13,7 +13,6 @@ import { joueur } from '../models/joueur';
 import { Error } from '../models/error';
 import { match } from '../models/match';
 
-
 @Injectable()
 export class ApiService extends BaseService {
   constructor(
@@ -25,9 +24,10 @@ export class ApiService extends BaseService {
 
   /**
    * return the ranking board
-   * @param date - date du classement
+   * @param date date du classement
+   * @return List of players by ranking order
    */
-  classementGETResponse(date?: string): Observable<HttpResponse<joueur[]>> {
+   classementGETResponse(date?: string): Observable<HttpResponse<joueur[]>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
@@ -55,22 +55,25 @@ export class ApiService extends BaseService {
 
   /**
    * return the ranking board
-   * @param date - date du classement
+   * @param date date du classement
+   * @return List of players by ranking order
    */
-  classementGET(date?: string): Observable<joueur[]> {
+   classementGET(date?: string): Observable<joueur[]> {
     return this.classementGETResponse(date).pipe(
       map(_r => _r.body)
     );
   }
+
   /**
    * return a player by id
-   * @param nom - nom du joueur
+   * @param nom nom du joueur
+   * @return show one player
    */
-  joueurNomGETResponse(nom: string): Observable<HttpResponse<joueur>> {
+   joueurNomGETResponse(nom: string): Observable<HttpResponse<joueur>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
-    
+
     let req = new HttpRequest<any>(
       "GET",
       this.rootUrl + `/joueur/${nom}`,
@@ -94,22 +97,109 @@ export class ApiService extends BaseService {
 
   /**
    * return a player by id
-   * @param nom - nom du joueur
+   * @param nom nom du joueur
+   * @return show one player
    */
-  joueurNomGET(nom: string): Observable<joueur> {
+   joueurNomGET(nom: string): Observable<joueur> {
     return this.joueurNomGETResponse(nom).pipe(
       map(_r => _r.body)
     );
   }
+
   /**
-   * return a player by fb userid
-   * @param userid - userid FB du joueur
+   * Enregistre ou met a jour un joueur
+   * @param joueur details du joueur
+   * @return show one player
    */
-  joueurFBGETResponse(userid: string): Observable<HttpResponse<joueur>> {
+   joueurPUTResponse(joueur: joueur): Observable<HttpResponse<joueur>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
-    
+    __body = joueur;
+    let req = new HttpRequest<any>(
+      "PUT",
+      this.rootUrl + `/joueur`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      filter(_r => _r instanceof HttpResponse),
+      map(_r => {
+        let _resp = _r as HttpResponse<any>;
+        let _body: joueur = null;
+        _body = _resp.body as joueur
+        return _resp.clone({body: _body}) as HttpResponse<joueur>;
+      })
+    );
+  }
+
+  /**
+   * Enregistre ou met a jour un joueur
+   * @param joueur details du joueur
+   * @return show one player
+   */
+   joueurPUT(joueur: joueur): Observable<joueur> {
+    return this.joueurPUTResponse(joueur).pipe(
+      map(_r => _r.body)
+    );
+  }
+
+  /**
+   * return list of all players
+   * @param X-FB-API-Key FB token
+   * @return show all player
+   */
+   joueursGETResponse(XFBAPIKey: string): Observable<HttpResponse<string[]>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+    if (XFBAPIKey != null) __params = __params.set("X-FB-API-Key", XFBAPIKey.toString());
+    let req = new HttpRequest<any>(
+      "GET",
+      this.rootUrl + `/joueurs`,
+      __body,
+      {
+        headers: __headers,
+        params: __params,
+        responseType: 'json'
+      });
+
+    return this.http.request<any>(req).pipe(
+      filter(_r => _r instanceof HttpResponse),
+      map(_r => {
+        let _resp = _r as HttpResponse<any>;
+        let _body: string[] = null;
+        _body = _resp.body as string[]
+        return _resp.clone({body: _body}) as HttpResponse<string[]>;
+      })
+    );
+  }
+
+  /**
+   * return list of all players
+   * @param X-FB-API-Key FB token
+   * @return show all player
+   */
+   joueursGET(XFBAPIKey: string): Observable<string[]> {
+    return this.joueursGETResponse(XFBAPIKey).pipe(
+      map(_r => _r.body)
+    );
+  }
+
+  /**
+   * return a player by fb userid
+   * @param userid userid FB du joueur
+   * @return show one player
+   */
+   joueurFBGETResponse(userid: string): Observable<HttpResponse<joueur>> {
+    let __params = this.newParams();
+    let __headers = new HttpHeaders();
+    let __body: any = null;
+
     let req = new HttpRequest<any>(
       "GET",
       this.rootUrl + `/joueurfb/${userid}`,
@@ -133,17 +223,20 @@ export class ApiService extends BaseService {
 
   /**
    * return a player by fb userid
-   * @param userid - userid FB du joueur
+   * @param userid userid FB du joueur
+   * @return show one player
    */
-  joueurFBGET(userid: string): Observable<joueur> {
+   joueurFBGET(userid: string): Observable<joueur> {
     return this.joueurFBGETResponse(userid).pipe(
       map(_r => _r.body)
     );
   }
+
   /**
    * return list of match
+   * @return show one player
    */
-  matchGETResponse(): Observable<HttpResponse<match[]>> {
+   matchGETResponse(): Observable<HttpResponse<match[]>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
@@ -170,45 +263,24 @@ export class ApiService extends BaseService {
 
   /**
    * return list of match
+   * @return show one player
    */
-  matchGET(): Observable<match[]> {
+   matchGET(): Observable<match[]> {
     return this.matchGETResponse().pipe(
       map(_r => _r.body)
     );
   }
+
   /**
    * record a match
-   * @param vainqueur - nom du vainqueur
-   * @param perdant - nom du perdant
-   * @param joueur - nom du joueur qui entre le match
-   * @param formatPartie - format de la partie
-   * @param armeevainqueur - armee du vainqueur
-   * @param armeeperdant - armee du perdant
-   * @param accessToken - token d'acces du joueur
-   * @param scorevainqueur - score du vainqueur
-   * @param scoreperdant - score du perdant
-   * @param scenario - nom du scenario joue
-   * @param powerlevel - nombre de PL de la partie
-   * @param points - nombre de points de la partie
-   * @param date - Date du match
+   * @param match details du la partie
+   * @return retourne le match
    */
-  matchPUTResponse(params: ApiService.MatchPUTParams): Observable<HttpResponse<match>> {
+   matchPUTResponse(match: match): Observable<HttpResponse<match>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
-    if (params.vainqueur != null) __params = __params.set("vainqueur", params.vainqueur.toString());
-    if (params.perdant != null) __params = __params.set("perdant", params.perdant.toString());
-    if (params.joueur != null) __params = __params.set("joueur", params.joueur.toString());
-    if (params.formatPartie != null) __params = __params.set("formatPartie", params.formatPartie.toString());
-    if (params.armeevainqueur != null) __params = __params.set("armeevainqueur", params.armeevainqueur.toString());
-    if (params.armeeperdant != null) __params = __params.set("armeeperdant", params.armeeperdant.toString());
-    if (params.accessToken != null) __params = __params.set("accessToken", params.accessToken.toString());
-    if (params.scorevainqueur != null) __params = __params.set("scorevainqueur", params.scorevainqueur.toString());
-    if (params.scoreperdant != null) __params = __params.set("scoreperdant", params.scoreperdant.toString());
-    if (params.scenario != null) __params = __params.set("scenario", params.scenario.toString());
-    if (params.powerlevel != null) __params = __params.set("powerlevel", params.powerlevel.toString());
-    if (params.points != null) __params = __params.set("points", params.points.toString());
-    if (params.date != null) __params = __params.set("date", params.date.toString());
+    __body = match;
     let req = new HttpRequest<any>(
       "PUT",
       this.rootUrl + `/match`,
@@ -232,34 +304,25 @@ export class ApiService extends BaseService {
 
   /**
    * record a match
-   * @param vainqueur - nom du vainqueur
-   * @param perdant - nom du perdant
-   * @param joueur - nom du joueur qui entre le match
-   * @param formatPartie - format de la partie
-   * @param armeevainqueur - armee du vainqueur
-   * @param armeeperdant - armee du perdant
-   * @param accessToken - token d'acces du joueur
-   * @param scorevainqueur - score du vainqueur
-   * @param scoreperdant - score du perdant
-   * @param scenario - nom du scenario joue
-   * @param powerlevel - nombre de PL de la partie
-   * @param points - nombre de points de la partie
-   * @param date - Date du match
+   * @param match details du la partie
+   * @return retourne le match
    */
-  matchPUT(params: ApiService.MatchPUTParams): Observable<match> {
-    return this.matchPUTResponse(params).pipe(
+   matchPUT(match: match): Observable<match> {
+    return this.matchPUTResponse(match).pipe(
       map(_r => _r.body)
     );
   }
+
   /**
    * return list of match for a player
-   * @param nom - nom du joueur
+   * @param nom nom du joueur
+   * @return liste des match
    */
-  matchjoueurNomGETResponse(nom: string): Observable<HttpResponse<match[]>> {
+   matchjoueurNomGETResponse(nom: string): Observable<HttpResponse<match[]>> {
     let __params = this.newParams();
     let __headers = new HttpHeaders();
     let __body: any = null;
-    
+
     let req = new HttpRequest<any>(
       "GET",
       this.rootUrl + `/matchjoueur/${nom}`,
@@ -283,28 +346,15 @@ export class ApiService extends BaseService {
 
   /**
    * return list of match for a player
-   * @param nom - nom du joueur
+   * @param nom nom du joueur
+   * @return liste des match
    */
-  matchjoueurNomGET(nom: string): Observable<match[]> {
+   matchjoueurNomGET(nom: string): Observable<match[]> {
     return this.matchjoueurNomGETResponse(nom).pipe(
       map(_r => _r.body)
     );
-  }}
+  }
+}
 
 export module ApiService {
-  export interface MatchPUTParams {
-    vainqueur: string;
-    perdant: string;
-    joueur: string;
-    formatPartie: string;
-    armeevainqueur: string;
-    armeeperdant: string;
-    accessToken: string;
-    scorevainqueur?: number;
-    scoreperdant?: number;
-    scenario?: string;
-    powerlevel?: number;
-    points?: number;
-    date?: string;
-  }
 }
